--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
     "node": "^18.20.2",
+    "nodemon": "^3.1.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
